# diffusion-limited-aggregation

./: .gitignore  CMakeLists.txt
configs/: five-points.json  right-side-tunnel.json  right-side.json  simple.json
prototype/: main.py
prototype/dla/: __init__.py  config.py  particle.py  random_generator.py  simulation.py  tree.py
src/: CMakeLists.txt  main.cpp  obstacle.cuh  particle.cu  particle.cuh  random_engine.cu  random_engine.cuh  simulation.cu  simulation.cuh  simulation_config.cpp  simulation_config.cu  simulation_config.cuh  simulation_config.h  utils.cpp  utils.h  visualization.cpp  visualization.h
